# Sprint

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  requirements_dev.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
data/processed/: gym_members_cleaned.csv
docs/: index.md  installation.md  usage.md
notebooks/: sprint2_eda.ipynb  sprint3_eda.ipynb
scripts/: clean_data.py
src/Sprint1/: __init__.py  cli.py
tests/: __init__.py  test_Sprint1.py
